# honest_team_test_task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
bot/: db.py  main.py  utils.py
